# fastapi-dynamodb-app

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.elasticbeanstalk/: autoscaling-settings.config  config.yml
.github/workflows/: ci-cd.yml
app/: config.py  dependencies.py  main.py  models.py  routes.py  services.py
tests/: test_app.py
