[tool.poetry]
name = "fastapiproject1"
version = "0.1.0"
description = "A FastAPI project integrated with AWS DynamoDB."
authors = ["George A. Quintas <george.quintas@geolly.com.au>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yourusername/fastapi-dynamodb-app"
repository = "https://github.com/yourusername/fastapi-dynamodb-app"
keywords = ["fastapi", "dynamodb", "aws", "api", "python"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
boto3 = "^1.35.36"
aioboto3 = "^13.2.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.1"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"